<!--
  ~ Copyright 2017, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">CRM APP</string>
    <string name="no_comments">No comments</string>
    <string name="loading_comments">Loading comments…</string>
    <string name="loading_products">Loading products…</string>
    <string name="search_products_hint">Search Products…</string>
    <string name="cd_products_list">Products list</string>
    <string name="cd_comments_list">Comments list</string>
    <string name="cd_product_name">Name of the product</string>
    <string name="cd_search_products">Search products</string>
    <string name="title_activity_termine">termine</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo">logo</string>
    <string name="home">Home</string>
    <string name="kontaktbild">kontaktbild</string>
    <string name="img_kontakte">img_kontakte</string>
    <string name="img_home">img_home</string>
    <string name="img_map">img_map</string>
    <string name="img_search">img_search</string>
    <string name="img_menu">img_menu</string>
    <string name="pic_soloplanlogobig">pic_soloplanlogobig</string>
    <string name="enter_username">Enter Username</string>
    <string name="name">Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="leads">leads</string>
    <string name="leads_near_me">leads_near_me</string>
    <string name="searchbutton">searchButton</string>

    <string name="logosoloplan">LogoSoloplan</string>
    <string name="upbutton">upbutton</string>
    <string name="textview">textview</string>
    <string name="add">+</string>

    <string name="gesamtunternehmen">Gesamtunternehmen</string>
    <string name="backbutton">backButton</string>
    <string name="mitarbeiterweise">Mitarbeiterweise</string>
    <string name="kundenweise">Kundenweise</string>
</resources>
