<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.leads">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="431dp"
        android:layout_height="79dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="101dp"
            android:layout_height="89dp"

            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.83"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.79"
            app:srcCompat="@drawable/bild_11" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView18"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:text="@string/leads_near_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <Button
        android:id="@+id/button11"
        android:layout_width="347dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="138dp"
        android:layout_height="26dp"
        android:layout_marginTop="18dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton20"
        android:layout_width="64dp"
        android:layout_height="43dp"
        android:contentDescription="@string/upbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795"
        app:srcCompat="@android:drawable/arrow_up_float" />


    <Button
        android:id="@+id/button10"
        android:layout_width="55dp"
        android:layout_height="42dp"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton19"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.099" />

    <ImageButton
        android:id="@+id/imageButton19"
        android:layout_width="46dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"

        android:layout_marginRight="16dp"
        android:contentDescription="@string/searchbutton"
        app:layout_constraintBottom_toTopOf="@+id/imageButton20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.099"
        app:srcCompat="@drawable/komponente_62" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="425dp"
        android:layout_height="88dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/kontakteButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_kontakte"

            app:srcCompat="@drawable/komponente_4__9" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_home"

            app:srcCompat="@drawable/komponente_310" />

        <ImageButton

            android:id="@+id/mapsButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_map"

            app:srcCompat="@drawable/komponente_59" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_search"

            app:srcCompat="@drawable/komponente_62" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_menu"

            app:srcCompat="@drawable/komponente_2_9" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
