<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.evaluations1">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="431dp"
        android:layout_height="79dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kundenweise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.403"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="101dp"
            android:layout_height="89dp"

            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.83"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.79"
            app:srcCompat="@drawable/bild_11" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="239dp"
        android:layout_height="36dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/kundenweise"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toEndOf="@+id/imageButton26"
        app:layout_constraintTop_toTopOf="@+id/imageButton26" />

    <ImageButton
        android:id="@+id/imageButton26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backbutton"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.02"
        app:srcCompat="@drawable/bild_31" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="425dp"
        android:layout_height="88dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/kontakteButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_kontakte"

            app:srcCompat="@drawable/komponente_4__9" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_home"

            app:srcCompat="@drawable/komponente_310" />

        <ImageButton

            android:id="@+id/mapsButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_map"

            app:srcCompat="@drawable/komponente_59" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_search"

            app:srcCompat="@drawable/komponente_62" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/img_menu"

            app:srcCompat="@drawable/komponente_2_9" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>